# XboxBiosTool

./: .gitignore  CMakeLists.txt  DecodeSettings.md  README.md  XbBiosTool.vcxproj  XboxBiosTools.sln  boot_state.md  boot_state_diagram_2bl.md  boot_state_diagram_fbl.md  boot_state_diagram_mcpx_rev0.md  boot_state_diagram_mcpx_rev1.md  boot_state_mcpx_rev0.md  boot_state_mcpx_rev1.md  decode.ini  decode_settings.ini  decode_settings2.ini  decode_settings3.ini  notes.txt
.github/workflows/: build.yml
XbBiosTool/: XbBiosTool.rc  XbBiosTool.vcxproj  XbBiosTool.vcxproj.filters  resource.h
inc/: Bios.h  Mcpx.h  X86Interp.h  XbTool.h  XcodeDecoder.h  XcodeInterp.h  bldr.h  cli_tbl.h  file.h  help_strings.h  loadini.h  lzx.h  main.h  mem_tracking.h  nt_headers.h  posix_shims.h  rc4.h  rsa.h  sha1.h  str_util.h  tea.h  type_defs.h  util.h  version.h  xbmem.h
src/: Bios.cpp  Mcpx.c  Mcpx.cpp  X86Interp.cpp  XbTool.cpp  XcodeDecoder.cpp  XcodeInterp.cpp  cli_tbl.cpp  file.c  file.cpp  loadini.c  loadini.cpp  lzx.cpp  lzx_decoder.c  lzx_encoder.c  main.cpp  mem_tracking.c  mem_tracking.cpp  nt_headers.c  nt_headers.cpp  rc4.c  rc4.cpp  rsa.c  rsa.cpp  sha1.c  sha1.cpp  str_util.c  str_util.cpp  tea.c  util.c  util.cpp  xbmem.cpp
tests/: CMakeLists.txt  clean.bat  decode.ini  test.bat
tests/compress/: test_main.cpp
vc/: XboxBiosTools.sln  XboxBiosTools.vcxproj  XboxBiosTools.vcxproj.filters
